# lily-search

./: Cargo.toml  ascii.md  db.md  index.html  lorem_ipsum.txt
search/: Cargo.toml
search/src/: lib.py  lib.rs  store.rs
src/: conn.rs  db.rs  error.rs  file.rs  main.rs  string.rs
